Criando pagina produtos

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,4 +10,8 @@ body {
   .btn {
     @apply bg-emerald-400 text-white px-3 py-2 rounded-md text-sm;
   }
+
+  .card {
+    @apply rounded overflow-hidden shadow-lg bg-white p-5;
+  }
 }
